@@ -86,16 +86,14 @@ describe Pry do
         o.instance_variable_get(:@x).should == 10
       end
 
-      it 'should not output anything for no input' do
-        outp = StringIO.new
-
-        # note i could not use mock_pry() for this test for some
-        # reason, as i'd always get "\n" as output instead of ""
-        redirect_pry_io(StringIO.new(""), outp) do
-          Pry.new.rep(self)
+      it 'should display error and throw(:breakout) if Pry instance runs out of input' do
+        str_output = StringIO.new
+        catch(:breakout) do
+          redirect_pry_io(StringIO.new(":nothing\n"), str_output) do
+            Pry.new.repl
+          end
         end
-
-        outp.string.empty?.should == true
+        str_output.string.should =~ /Error: Pry ran out of things to read/
       end
 
       it 'should make self evaluate to the receiver of the rep session' do
